# demo-uv-workspace

./: LICENSE  justfile  pyproject.toml  readme.md
src/foo-sub1/: pyproject.toml  readme.md
src/foo-sub1/src/foo/sub1/: __init__.py
src/foo-sub2/: pyproject.toml  readme.md
src/foo-sub2/src/foo/sub2/: __init__.py
src/foobar/: pyproject.toml  readme.md
src/foobar/src/foobar/: __init__.py
