
[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"


[project]
name = "foo-sub1"  # Distribution name (normalized)
version = "0.1"
description = "Add your description here"
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
]


[tool.uv.build-backend]
module-name = "foo.sub1"
