
[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"


[project]
name = "foobar"
version = "0.3"
description = "Add your description here"
readme = "readme.md"
authors = [
    { name = "Wouter Vanden Hove" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
]

